// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemedText Snapshots matches snapshot with custom colors 1`] = `
<Text
  style={
    [
      {
        "color": "#000000",
      },
      {
        "color": "#333333",
        "fontFamily": "Ubuntu-Regular",
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 24,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
>
  Colored Text
</Text>
`;

exports[`ThemedText Snapshots matches snapshot with custom style 1`] = `
<Text
  style={
    [
      {
        "color": "#000000",
      },
      {
        "color": "#333333",
        "fontFamily": "Ubuntu-Regular",
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 24,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      {
        "fontSize": 20,
        "fontWeight": "bold",
      },
    ]
  }
>
  Styled Text
</Text>
`;

exports[`ThemedText Snapshots matches snapshot with default type 1`] = `
<Text
  style={
    [
      {
        "color": "#000000",
      },
      {
        "color": "#333333",
        "fontFamily": "Ubuntu-Regular",
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 24,
      },
      undefined,
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
>
  Default Text
</Text>
`;

exports[`ThemedText Snapshots matches snapshot with link type 1`] = `
<Text
  style={
    [
      {
        "color": "#000000",
      },
      undefined,
      undefined,
      undefined,
      undefined,
      {
        "color": "#0a7ea4",
        "fontFamily": "Ubuntu-Regular",
        "fontSize": 16,
        "fontWeight": "400",
        "lineHeight": 30,
      },
      undefined,
    ]
  }
>
  Link Text
</Text>
`;

exports[`ThemedText Snapshots matches snapshot with subtitle type 1`] = `
<Text
  style={
    [
      {
        "color": "#000000",
      },
      undefined,
      undefined,
      undefined,
      {
        "color": "#1E376C",
        "fontFamily": "Ubuntu-Medium",
        "fontSize": 18,
        "fontWeight": "500",
      },
      undefined,
      undefined,
    ]
  }
>
  Subtitle Text
</Text>
`;

exports[`ThemedText Snapshots matches snapshot with title type 1`] = `
<Text
  style={
    [
      {
        "color": "#000000",
      },
      undefined,
      {
        "color": "#1E376C",
        "fontFamily": "Ubuntu-Bold",
        "fontSize": 28,
        "fontWeight": "800",
        "lineHeight": 32,
      },
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
>
  Title Text
</Text>
`;
